heap size in build.sbt